# recall

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  justfile  recall.toml
.github/workflows/: ci.yml
crates/recall/: Cargo.toml
crates/recall-calibrate/: Cargo.toml
crates/recall-calibrate/src/: adaptive.rs  lib.rs  moments.rs  stats.rs
crates/recall-core/: Cargo.toml
crates/recall-core/benches/: hot_path.rs
crates/recall-core/src/: boxed.rs  cache.rs  embed.rs  error.rs  index.rs  kv.rs  lib.rs  math.rs  policy.rs  testing.rs  types.rs
crates/recall-embed/: Cargo.toml
crates/recall-embed/src/: lib.rs  static_model.rs
crates/recall-eval/: Cargo.toml
crates/recall-eval/src/: lib.rs  main.rs
crates/recall-index/: Cargo.toml
crates/recall-index/benches/: ann.rs
crates/recall-index/src/: hnsw.rs  lib.rs
crates/recall-proxy/: Cargo.toml
crates/recall-proxy/src/: config.rs  lib.rs  metrics.rs  reload.rs  replay.rs  request.rs
crates/recall-proxy/tests/: proxy.rs
crates/recall-store/: Cargo.toml
crates/recall-store/src/: lib.rs  redb_store.rs
crates/recall/src/: main.rs
docs/: API.md  CONFIG.md  GETTING_STARTED.md  OPERATIONS.md
scripts/: ci.sh
