[package]
name = "recall-core"
description = "recall — the semantic-cache seams (Embedder/AnnIndex/Store/ThresholdPolicy) plus the in-memory MVP implementations. The product is here; backends are pluggable."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# crates.io metadata (PLAN.md §7). The default build pulls ZERO ML/network deps — that is
# the single-static-binary / air-gap property. Trim non-shipping paths from the tarball.
keywords = ["llm", "cache", "semantic-cache", "openai", "embeddings"]
categories = ["caching", "command-line-utilities"]
exclude = ["benches/"]

[features]
# default is intentionally empty: no serde, no I/O, no ML. `serde` lets a real Store blob an
# Entry without core taking serde unless asked. (PLAN.md §2.1, §3-MVP.)
default = []
serde = ["dep:serde"]
# Test-support seam doubles (`FailingIndex`, `AlwaysHit`) for downstream crates' tests. Empty deps,
# so it never affects the default / single-static-binary / air-gap build.
test-support = []

[dependencies]
# The ONLY default deps: a no_std-friendly error derive and a fast hash for namespace-key
# derivation. No Tokio, no network, no ONNX/ort/tokenizers, no vector DB. (PLAN.md §2.1.)
thiserror = "2"
blake3 = "1"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
# Criterion drives the hot-path micro-benches (PLAN.md §6.4). A dev-dependency only — it never
# enters the default/library build or the published tarball (`exclude` trims `benches/`), so the
# zero-ML/network/C-dep air-gap property is unaffected. default-features off drops plotters/rayon.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "hot_path"
harness = false
